# Clutter-Dataset-Toolbox

./: CMakeLists.txt  README.md  package.xml
include/: GazeboRosOusterLaser.h  Imu9dof.h  PID.h  cubicSpline.h
launch/: demo.launch  rotation.launch
models/chair/: model.sdf
models/large_clutter/: model.config  model.sdf
models/wall_slate/: model.config  model.sdf
src/: GazeboRosOusterLaser.cpp  Imu9dof.cpp  PID.cpp  car_steer.cpp  rotation_motion.cpp
urdf/: Ouster-64.urdf  Ouster-64.urdf.xacro  demo.urdf.xacro
utils/building_gen/: buiding.py  gen_building.py
utils/building_gen/worlds/: room1.world  room1_mirror.world  rotation.world  world_test.world
utils/obj_gen/: ground.py  occupied_grids.py
virtual_dataset/: CMakeLists.txt
virtual_dataset/launch/: demo.launch  test.launch
virtual_dataset/src/: car_steer.cpp  cubicSpline.cpp
virtual_dataset/urdf/: test_cube.urdf  test_cube.urdf.xacro
virtual_dataset/util/building_gen/: gen_building.py  gen_world.py
virtual_dataset/util/building_gen/floorplans/: floorplan_0.txt  room1.txt  standard.txt
virtual_dataset/util/building_gen/worlds/: standard.world
virtual_dataset/util/obj_gen/: ceiling.py  pycubicspline.py  workspace.py
virtual_dataset/utils/building_gen/: sdf_util.py
virtual_dataset/utils/building_gen/floorplans/: rotation.txt
virtual_dataset/utils/building_gen/worlds/: model_test.world
virtual_dataset/utils/obj_gen/: pycubicspline.py  wall.py
virtual_dataset/world/: ceil_room.world  chaotic_room.world  wall_room.world
world/: demo.world  final_room.world  new2.world  normal_room.world  normal_room_unfinished  planner_mover.world  reference_clean.world
