<?xml version="1.0"?>
<package format="2">
  <name>virtual_dataset</name>
  <version>0.0.0</version>
  <description>The virtual_dataset package</description>
  <maintainer email="asd@asd.asd">asd</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rospy</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  
  <export>
  </export>
</package>
